[package]
name = "iroh-fake-store"
version = "0.1.0"
edition = "2021"
authors = ["ari lotter <arilotter@gmail.com>"]
description = "a fake iroh-blobs store for testing that generates data on-the-fly without storage"
readme = "README.md"
repository = "https://github.com/arilotter/iroh-fake-store"
license = "MIT OR Apache-2.0"
keywords = ["iroh", "testing", "fake", "mock", "blobs"]
categories = ["development-tools::testing"]

[dependencies]
iroh-blobs = "0.94.0"
bao-tree = "0.15"
bytes = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
ref-cast = "1"
irpc = "0.8"
range-collections = "0.4"

[dev-dependencies]
tempfile = "3"
n0-future = "0.1"
tokio-test = "0.4"
iroh = "0.92.0"
tracing-subscriber = "0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
